--- a/apk/res/values-ca/strings.xml
+++ b/apk/res/values-ca/strings.xml
@@ -334,7 +334,7 @@
     <string name="denied_apps_dialog_got_it_button" msgid="4698003516923683959">"Entesos"</string>
     <string name="export_file_access_error_banner_button" msgid="6336949702329425932">"Configura"</string>
     <string name="export_file_access_error_banner_title" msgid="8290988049467813322">"No s\'han pogut exportar les dades"</string>
-    <string name="export_file_access_error_banner_summary" msgid="1226999878868505503">"Hi ha hagut un problema amb l\'exportació del dia <xliff:g id="DATE">%1$s</xliff:g>. Configura una exportació programada nova i torna-ho a provar."</string>
+    <string name="export_file_access_error_banner_summary" msgid="1226999878868505503">"S\'ha produït un problema amb l\'exportació del dia <xliff:g id="DATE">%1$s</xliff:g>. Configura una exportació programada nova i torna-ho a provar."</string>
     <string name="next_export_time" msgid="3138247220014510213">"Pròxima exportació: <xliff:g id="DATE">%1$s</xliff:g>"</string>
     <string name="backup_and_restore_settings_screen_title" msgid="5391086732955348809">"Còpia de seguretat i restauració"</string>
     <string name="last_export_time" msgid="9205875050823594041">"Darrera exportació: <xliff:g id="DATE">%1$s</xliff:g>"</string>
@@ -392,9 +392,9 @@
     <string name="time_range_message_data_type" msgid="1896125004829258195">"Aquesta acció suprimeix permanentment les dades de <xliff:g id="DATA_TYPE">%s</xliff:g> que s\'han afegit a Salut connectada durant el període de temps seleccionat"</string>
     <string name="time_range_message_category" msgid="1136451418397326356">"Aquesta acció suprimeix permanentment les dades de la categoria <xliff:g id="CATEGORY">%s</xliff:g> que s\'han afegit a Salut connectada durant el període de temps seleccionat"</string>
     <string name="time_range_message_app_data" msgid="2590800457710603556">"Aquesta acció suprimeix permanentment les dades de l\'aplicació <xliff:g id="APP_DATA">%s</xliff:g> que s\'han afegit a Salut connectada durant el període de temps seleccionat"</string>
-    <string name="time_range_one_day" msgid="7162709826595446727">"Suprimeix les dades de les 24 darreres hores"</string>
-    <string name="time_range_one_week" msgid="8754523384275645434">"Suprimeix les dades dels 7 darrers dies"</string>
-    <string name="time_range_one_month" msgid="3034747870231999766">"Suprimeix les dades dels 30 darrers dies"</string>
+    <string name="time_range_one_day" msgid="7162709826595446727">"Suprimeix les 24 darreres hores"</string>
+    <string name="time_range_one_week" msgid="8754523384275645434">"Suprimeix els 7 darrers dies"</string>
+    <string name="time_range_one_month" msgid="3034747870231999766">"Suprimeix els 30 darrers dies"</string>
     <string name="time_range_all" msgid="8167350212705839943">"Suprimeix totes les dades"</string>
     <string name="confirming_question_all" msgid="1585414659784742952">"Vols suprimir permanentment totes les dades des de sempre?"</string>
     <string name="confirming_question_one_day" msgid="8001434729335611950">"Vols suprimir permanentment totes les dades de les 24 darreres hores?"</string>
@@ -845,7 +845,7 @@
     <string name="request_route_allow_all" msgid="314830698958736916">"Permet totes les rutes"</string>
     <string name="request_route_dont_allow" msgid="1186236234664957228">"No permetis"</string>
     <string name="route_permissions_always_allow" msgid="1383816362804293137">"Permet sempre"</string>
-    <string name="route_permissions_label" msgid="6293377940884373190">"Accedeix a les rutes d\'exercici"</string>
+    <string name="route_permissions_label" msgid="6293377940884373190">"Accedir a les rutes d\'exercici"</string>
     <string name="route_permissions_summary" msgid="704859311037374130">"Permet que <xliff:g id="APP_NAME">%1$s</xliff:g> accedeixi a les rutes"</string>
     <string name="route_permissions_ask" msgid="3927020960754781917">"Pregunta sempre"</string>
     <string name="route_permissions_deny" msgid="4955644777239169593">"No permetis"</string>
