--- a/apk/res/values-el/strings.xml
+++ b/apk/res/values-el/strings.xml
@@ -353,9 +353,9 @@
     <string name="choose_frequency_category" msgid="2230821549715237663">"Επιλογή συχνότητας"</string>
     <string name="choose_frequency" msgid="1077467424225083246">"Επιλογή συχνότητας"</string>
     <string name="choose_frequency_description" msgid="752601326653048254">"Επιλέξτε αν θέλετε να αποθηκεύσετε τα δεδομένα μία φορά ή αν θα αποθηκεύονται αυτόματα ανά τακτά χρονικά διαστήματα."</string>
-    <string name="frequency_daily" msgid="3596412357416125727">"Ανά ημέρα"</string>
-    <string name="frequency_weekly" msgid="7302587625019573393">"Ανά εβδομάδα"</string>
-    <string name="frequency_monthly" msgid="729674398053825938">"Ανά μήνα"</string>
+    <string name="frequency_daily" msgid="3596412357416125727">"Ημερήσια"</string>
+    <string name="frequency_weekly" msgid="7302587625019573393">"Εβδομαδιαία"</string>
+    <string name="frequency_monthly" msgid="729674398053825938">"Μηνιαία"</string>
     <string name="export_destination_title" msgid="1434632545224158402">"Επιλογή θέσης εξαγωγής"</string>
     <string name="export_invalid_storage" msgid="3945266169513895950">"Επιλέξτε μια εφαρμογή αποθηκευτικού χώρου για να εξαγάγετε τα δεδομένα σας"</string>
     <string name="import_decryption_title" msgid="396608799208392844">"Πληκτρολογήστε τον κωδικό πρόσβασης"</string>
