--- a/apk/res/values-fr/strings.xml
+++ b/apk/res/values-fr/strings.xml
@@ -271,15 +271,15 @@
     <string name="mindfulness_lowercase_label" msgid="5184488636180881614">"pleine conscience"</string>
     <string name="mindfulness_read_content_description" msgid="739187536826062524">"Lire les données de Pleine conscience"</string>
     <string name="mindfulness_write_content_description" msgid="7925112426563398421">"Écrire les données de Pleine conscience"</string>
-    <string name="read_permission_category" msgid="6002099618259628632">"Autoriser <xliff:g id="APP_NAME">%1$s</xliff:g> à lire"</string>
-    <string name="write_permission_category" msgid="1529702804865008111">"Autoriser <xliff:g id="APP_NAME">%1$s</xliff:g> à écrire"</string>
+    <string name="read_permission_category" msgid="6002099618259628632">"Autoriser <xliff:g id="APP_NAME">%1$s</xliff:g> à lire les données suivantes"</string>
+    <string name="write_permission_category" msgid="1529702804865008111">"Autoriser <xliff:g id="APP_NAME">%1$s</xliff:g> à écrire les données suivantes"</string>
     <string name="request_permissions_cancel" msgid="1787483997235365393">"Annuler"</string>
     <string name="request_permissions_allow" msgid="4201324235711040631">"Autoriser"</string>
     <string name="request_permissions_allow_all" msgid="3419414351406638770">"Tout autoriser"</string>
     <string name="request_permissions_dont_allow" msgid="6375307410951549030">"Ne pas autoriser"</string>
     <string name="request_permissions_header_desc" msgid="5561173070722750153">"Sélectionnez les données que cette appli peut lire ou modifier dans Santé Connect"</string>
-    <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Si vous autorisez un accès en lecture, l\'appli peut lire les nouvelles données et celles des 30 derniers jours"</string>
-    <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Si vous autorisez un accès en lecture, l\'appli peut lire les nouvelles données ainsi que les données précédentes"</string>
+    <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Si vous lui donnez accès en lecture, l\'appli pourra lire les nouvelles données et celles des 30 derniers jours."</string>
+    <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Si vous lui donnez accès en lecture, l\'appli pourra lire les anciennes et les nouvelles données."</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Autoriser <xliff:g id="APP_NAME">%1$s</xliff:g> à accéder à Santé Connect ?"</string>
     <string name="request_permissions_rationale" msgid="6154280355215802538">"Consultez les <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> du développeur pour découvrir comment <xliff:g id="APP_NAME">%1$s</xliff:g> gère vos données."</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"règles de confidentialité"</string>
@@ -340,7 +340,7 @@
     <string name="last_export_time" msgid="9205875050823594041">"Dernier export : <xliff:g id="DATE">%1$s</xliff:g>"</string>
     <string name="export_and_import_title" msgid="3241901922222465397">"Exporter et importer"</string>
     <string name="scheduled_export" msgid="8737660963687364370">"Exportation programmée"</string>
-    <string name="import_data" msgid="404502315533233094">"Importer les données"</string>
+    <string name="import_data" msgid="404502315533233094">"Importer des données"</string>
     <string name="import_data_description" msgid="4040178599441724296">"Restaurez les données d\'un fichier précédemment exporté"</string>
     <string name="import_wrong_file_error_banner_button" msgid="1518043363477255045">"Sélectionner un fichier"</string>
     <!-- no translation found for import_wrong_file_error_banner_title (1841182157722596266) -->
@@ -500,7 +500,7 @@
     <string name="boot_camp" msgid="1554811887379786226">"Camp d\'entraînement"</string>
     <string name="boxing" msgid="2200194516739940317">"Boxe"</string>
     <string name="burpee" msgid="1434605818712603589">"Burpees"</string>
-    <string name="calisthenics" msgid="9080623890020954493">"Gymnastique suédoise"</string>
+    <string name="calisthenics" msgid="9080623890020954493">"Callisthénie"</string>
     <string name="cricket" msgid="7543586707938752011">"Cricket"</string>
     <string name="crunch" msgid="4265356947720591896">"Abdos crunch"</string>
     <string name="dancing" msgid="4099572666298130171">"Danse"</string>
@@ -632,7 +632,7 @@
     <string name="mucus_sticky" msgid="2086025099544529404">"Collante"</string>
     <string name="mucus_creamy" msgid="7525290054414941569">"Crémeuse"</string>
     <string name="mucus_watery" msgid="1875540699006472048">"Liquide"</string>
-    <string name="mucus_egg_white" msgid="5578512593433767787">"Blanc d\'œuf"</string>
+    <string name="mucus_egg_white" msgid="5578512593433767787">"Transparentes"</string>
     <string name="mucus_unusual" msgid="3987847850745292757">"Inhabituelle"</string>
     <string name="mucus_light" msgid="5309343389013086860">"Peu abondante"</string>
     <string name="mucus_medium" msgid="7666848347740570566">"Quantité moyenne"</string>
