--- a/apk/res/values-hr/strings.xml
+++ b/apk/res/values-hr/strings.xml
@@ -39,7 +39,7 @@
     <string name="set_units_title" msgid="2657822539603758029">"Postavite jedinice"</string>
     <string name="manage_data_preferences_category_title" msgid="1183110821140344472">"Preferencije"</string>
     <string name="manage_data_category_title" msgid="6328886061582616519">"Upravljanje podacima"</string>
-    <string name="backup_and_restore_settings_summary" msgid="4345972157089493077">"Izvezi i uvezi podatke"</string>
+    <string name="backup_and_restore_settings_summary" msgid="4345972157089493077">"Izvoz i uvoz podataka"</string>
     <string name="recent_access_header" msgid="7623497371790225888">"Nedavni pristup"</string>
     <string name="no_recent_access" msgid="4724297929902441784">"Nijedna aplikacija nije pristupila Health Connectu u posljednje vrijeme"</string>
     <string name="show_recent_access_entries_button_title" msgid="3483460066767350419">"Pogledajte sve nedavne pristupe"</string>
@@ -242,7 +242,7 @@
     <string name="heart_rate_read_content_description" msgid="4165867166260001259">"Očitavanje pulsa"</string>
     <string name="heart_rate_write_content_description" msgid="2876667918366409170">"Bilježenje pulsa"</string>
     <string name="heart_rate_variability_uppercase_label" msgid="2047887230527012536">"Varijabilnost pulsa"</string>
-    <string name="heart_rate_variability_lowercase_label" msgid="2332638559415663836">"varijabilnost pulsa"</string>
+    <string name="heart_rate_variability_lowercase_label" msgid="2332638559415663836">"varijabilnost srčanog ritma"</string>
     <string name="heart_rate_variability_read_content_description" msgid="5812707457872629556">"Očitavanje podataka o varijabilnosti pulsa"</string>
     <string name="heart_rate_variability_write_content_description" msgid="3628171603035566114">"Bilježenje podataka o varijabilnosti pulsa"</string>
     <string name="oxygen_saturation_uppercase_label" msgid="1396254185616418355">"Zasićenost kisikom"</string>
