--- a/apk/res/values-ko/strings.xml
+++ b/apk/res/values-ko/strings.xml
@@ -346,7 +346,7 @@
     <!-- no translation found for import_wrong_file_error_banner_title (1841182157722596266) -->
     <skip />
     <string name="import_wrong_file_error_banner_summary" msgid="4857514343099050126">"선택한 파일은 복원 기능과 호환되지 않습니다. 내보낸 파일을 올바르게 선택했는지 확인하세요."</string>
-    <string name="backup_and_restore_footer_body_text" msgid="4854718727539851909">"내보내기를 사용하면 데이터를 저장하여 새 휴대전화로 데이터를 전송할 수 있습니다."</string>
+    <string name="backup_and_restore_footer_body_text" msgid="4854718727539851909">"내보내기 기능을 사용하면 데이터를 저장하여 새 휴대전화로 전송할 수 있습니다."</string>
     <string name="backup_and_restore_footer_link_text" msgid="5862384033902147721">"자세히 알아보기"</string>
     <string name="automatic_export_on" msgid="6972389773963624315">"사용"</string>
     <string name="automatic_export_off" msgid="3270255845008880841">"사용 안함"</string>
