--- a/apk/res/values-ky/strings.xml
+++ b/apk/res/values-ky/strings.xml
@@ -367,7 +367,7 @@
     <string name="export_next_button" msgid="657930567137105172">"Кийинки"</string>
     <string name="import_cancel_button" msgid="2191598074422096715">"Жокко чыгаруу"</string>
     <string name="import_next_button" msgid="5706322508691854289">"Кийинки"</string>
-    <string name="import_source_location_title" msgid="4444467438013749461">"Төмөнкүдө өткөрүп алуу"</string>
+    <string name="import_source_location_title" msgid="4444467438013749461">"Каяктан өткөрөсүз:"</string>
     <string name="import_invalid_storage" msgid="4873640088459948487">"Нерселериңизди өткөрүп алуу үчүн файлдарды сактай турган колдонмону тандаңыз"</string>
     <string name="export_import_tap_to_choose_account" msgid="5016799636886709580">"Аккаунтту тандоо үчүн таптап коюңуз"</string>
     <string name="export_import_choose_account_title" msgid="1047021319012735232">"Аккаунт тандаңыз"</string>
@@ -872,7 +872,7 @@
     <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Health Connect колдонмосун жаңыртуу керек"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Улантуудан мурун Health Connect колдонмосун эң акыркы версиясына жаңыртыңыз."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Көбүрөөк орун керек"</string>
-    <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Интеграцияны улантуу үчүн Health Connect колдонмосуна телефонуңуздан <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> орун керек.\n\nТелефонуңуздан орун бошотуп, кайра аракет кылыңыз."</string>
+    <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Интеграцияны улантуу үчүн Health Connect колдонмосуна телефонуңуздан <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> орун керек.\n\nТелефонуңуздан орун бошотуп, кайталап көрүңүз."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Кайталоо"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Орун бошотуу"</string>
     <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Көбүрөөк орун керек"</string>
