--- a/apk/res/values-mn/strings.xml
+++ b/apk/res/values-mn/strings.xml
@@ -336,7 +336,7 @@
     <string name="export_file_access_error_banner_title" msgid="8290988049467813322">"Өгөгдлийг экспорт хийж чадсангүй"</string>
     <string name="export_file_access_error_banner_summary" msgid="1226999878868505503">"<xliff:g id="DATE">%1$s</xliff:g>-н экспорттой холбоотой асуудал гарлаа. Хуваарьт шинэ экспорт тохируулаад, дахин оролдоно уу."</string>
     <string name="next_export_time" msgid="3138247220014510213">"Дараагийн экспорт хийх огноо: <xliff:g id="DATE">%1$s</xliff:g>"</string>
-    <string name="backup_and_restore_settings_screen_title" msgid="5391086732955348809">"Нөөцлөх болон сэргээх"</string>
+    <string name="backup_and_restore_settings_screen_title" msgid="5391086732955348809">"Нөөцлөх, сэргээх"</string>
     <string name="last_export_time" msgid="9205875050823594041">"Сүүлд экспорт хийсэн огноо: <xliff:g id="DATE">%1$s</xliff:g>"</string>
     <string name="export_and_import_title" msgid="3241901922222465397">"Экспорт хийх болон импорт хийх"</string>
     <string name="scheduled_export" msgid="8737660963687364370">"Хуваарьт экспорт"</string>
