--- a/apk/res/values-pt-rPT/strings.xml
+++ b/apk/res/values-pt-rPT/strings.xml
@@ -88,7 +88,7 @@
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"Permite que a app leia as calorias queimadas"</string>
     <string name="background_read_title" msgid="5061383169517186234">"Aceder aos dados em segundo plano"</string>
     <string name="background_read_request_title" msgid="8492898140120977977">"Permitir que a app <xliff:g id="APP_NAME">%1$s</xliff:g> aceda aos dados em segundo plano?"</string>
-    <string name="background_read_description" msgid="3203594555849969283">"Permitir que esta app aceda aos dados da Saúde Connect quando não estiver a usá-la"</string>
+    <string name="background_read_description" msgid="3203594555849969283">"Permita que esta app aceda aos dados da Saúde Connect quando não estiver a usá-la"</string>
     <string name="background_read_request_description" msgid="1664402237648709581">"Se permitir, esta app pode aceder aos dados da Saúde Connect quando não estiver a usar a app."</string>
     <string name="historic_access_title" msgid="3584594624937737030">"Aceder aos dados anteriores"</string>
     <string name="historic_access_request_title" msgid="4645920231853414742">"Permitir que a app <xliff:g id="APP_NAME">%1$s</xliff:g> aceda aos dados anteriores?"</string>
@@ -367,7 +367,7 @@
     <string name="export_next_button" msgid="657930567137105172">"Seguinte"</string>
     <string name="import_cancel_button" msgid="2191598074422096715">"Cancelar"</string>
     <string name="import_next_button" msgid="5706322508691854289">"Seguinte"</string>
-    <string name="import_source_location_title" msgid="4444467438013749461">"Importe de"</string>
+    <string name="import_source_location_title" msgid="4444467438013749461">"Origem da importação"</string>
     <string name="import_invalid_storage" msgid="4873640088459948487">"Escolha uma app de armazenamento para importar os seus dados"</string>
     <string name="export_import_tap_to_choose_account" msgid="5016799636886709580">"Tocar para selecionar uma conta"</string>
     <string name="export_import_choose_account_title" msgid="1047021319012735232">"Escolha uma conta"</string>
@@ -388,14 +388,14 @@
     <string name="exit_deletion_button_content_description" msgid="6579227028841619158">"Sair da eliminação"</string>
     <string name="time_range_title" msgid="6831605283322600165">"Escolha os dados a apagar"</string>
     <string name="time_range_next_button" msgid="5849096934896557888">"Seguinte"</string>
-    <string name="time_range_message_all" msgid="7280888587242744729">"Esta ação apaga permanentemente todos os dados adicionados à Saúde Connect no período escolhido"</string>
+    <string name="time_range_message_all" msgid="7280888587242744729">"Esta ação elimina permanentemente todos os dados adicionados à Saúde Connect no período escolhido"</string>
     <string name="time_range_message_data_type" msgid="1896125004829258195">"Esta ação apaga permanentemente os dados da app <xliff:g id="DATA_TYPE">%s</xliff:g> adicionados à Saúde Connect no período escolhido"</string>
     <string name="time_range_message_category" msgid="1136451418397326356">"Esta ação apaga permanentemente os dados da app <xliff:g id="CATEGORY">%s</xliff:g> adicionados à Saúde Connect no período escolhido"</string>
     <string name="time_range_message_app_data" msgid="2590800457710603556">"Esta ação apaga permanentemente os dados da app <xliff:g id="APP_DATA">%s</xliff:g> adicionados à Saúde Connect no período escolhido"</string>
-    <string name="time_range_one_day" msgid="7162709826595446727">"Apagar dados das últimas 24 horas"</string>
-    <string name="time_range_one_week" msgid="8754523384275645434">"Apagar dados dos últimos 7 dias"</string>
-    <string name="time_range_one_month" msgid="3034747870231999766">"Apagar dados dos últimos 30 dias"</string>
-    <string name="time_range_all" msgid="8167350212705839943">"Apagar todos os dados"</string>
+    <string name="time_range_one_day" msgid="7162709826595446727">"Eliminar dados das últimas 24 horas"</string>
+    <string name="time_range_one_week" msgid="8754523384275645434">"Eliminar dados dos últimos 7 dias"</string>
+    <string name="time_range_one_month" msgid="3034747870231999766">"Eliminar dados dos últimos 30 dias"</string>
+    <string name="time_range_all" msgid="8167350212705839943">"Eliminar todos os dados"</string>
     <string name="confirming_question_all" msgid="1585414659784742952">"Apagar permanentemente todos os dados desde sempre?"</string>
     <string name="confirming_question_one_day" msgid="8001434729335611950">"Apagar permanentemente todos os dados das últimas 24 horas?"</string>
     <string name="confirming_question_one_week" msgid="5441506951423969587">"Apagar permanentemente todos os dados dos últimos 7 dias?"</string>
@@ -803,12 +803,12 @@
     <string name="auto_delete_title" msgid="8761742828224207826">"Eliminação automática"</string>
     <string name="auto_delete_header" msgid="4258649705159293715">"Agende a eliminação dos dados após um certo período para definir o tempo durante o qual estes ficam armazenados na Saúde Connect"</string>
     <string name="auto_delete_learn_more" msgid="7416469042791307994">"Saiba mais sobre a Eliminação automática"</string>
-    <string name="auto_delete_section" msgid="7732381000331475082">"Apagar os dados automaticamente"</string>
+    <string name="auto_delete_section" msgid="7732381000331475082">"Eliminação automática dos dados"</string>
     <string name="range_after_x_months" msgid="3340127072680117121">"{count,plural, =1{Após # mês}other{Após # meses}}"</string>
     <string name="range_never" msgid="4429478261788361233">"Nunca"</string>
     <string name="range_off" msgid="8178520557618184215">"Desativar"</string>
-    <string name="auto_delete_rationale" msgid="5255442126521464878">"Quando altera estas definições, a Saúde Connect apaga os dados existentes para refletir as suas novas preferências"</string>
-    <string name="confirming_question_x_months" msgid="8204363800605282103">"{count,plural, =1{Apagar automaticamente os dados após # mês?}other{Apagar automaticamente os dados após # meses?}}"</string>
+    <string name="auto_delete_rationale" msgid="5255442126521464878">"Quando altera estas definições, a Saúde Connect elimina os dados existentes para refletir as suas novas preferências"</string>
+    <string name="confirming_question_x_months" msgid="8204363800605282103">"{count,plural, =1{Eliminar automaticamente os dados após # mês?}other{Eliminar automaticamente os dados após # meses?}}"</string>
     <string name="confirming_message_x_months" msgid="4798474593741471977">"{count,plural, =1{A Saúde Connect vai apagar automaticamente os dados após # mês. Ao definir esta opção, também apaga os dados existentes com mais de # mês.}other{A Saúde Connect vai apagar automaticamente os dados após # meses. Ao definir esta opção, também apaga os dados existentes com mais de # meses.}}"</string>
     <string name="set_auto_delete_button" msgid="268450418318199197">"Definir eliminação automática"</string>
     <string name="deletion_started_title" msgid="1177766097121885025">"Os dados atuais vão ser apagados"</string>
