--- a/apk/res/values-ta/strings.xml
+++ b/apk/res/values-ta/strings.xml
@@ -88,7 +88,7 @@
     <string name="permdesc_readCaloriesBurned" msgid="9012595355389868570">"எரிக்கப்பட்ட கலோரிகள் குறித்த தரவை வாசிக்க ஆப்ஸை அனுமதிக்கும்"</string>
     <string name="background_read_title" msgid="5061383169517186234">"பின்னணியில் தரவை அணுகுதல்"</string>
     <string name="background_read_request_title" msgid="8492898140120977977">"பின்னணியில் தரவை அணுக <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸை அனுமதிக்கவா?"</string>
-    <string name="background_read_description" msgid="3203594555849969283">"நீங்கள் ஆப்ஸைப் பயன்படுத்தாதபோது, Health Connect தரவை அணுக இந்த ஆப்ஸை அனுமதிக்கவும்"</string>
+    <string name="background_read_description" msgid="3203594555849969283">"நீங்கள் ஆப்ஸைப் பயன்படுத்தாதபோது, Health Connect தரவை அணுக இந்த ஆப்ஸை அனுமதிக்கும்"</string>
     <string name="background_read_request_description" msgid="1664402237648709581">"அனுமதித்தால், நீங்கள் ஆப்ஸைப் பயன்படுத்தாதபோது, Health Connect தரவை இந்த ஆப்ஸ் அணுகும்."</string>
     <string name="historic_access_title" msgid="3584594624937737030">"முந்தைய தரவை அணுகுதல்"</string>
     <string name="historic_access_request_title" msgid="4645920231853414742">"முந்தைய தரவை அணுக <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸை அனுமதிக்கவா?"</string>
